--- a/404.html
+++ b/404.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-US" dir="ltr">
+<html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -17,7 +17,7 @@
   </head>
   <body>
     <div id="app"></div>
-    <script>window.__VP_HASH_MAP__=JSON.parse("{\"docs.md\":\"By4OhrEu\",\"index.md\":\"DVVNNhlo\"}");window.__VP_SITE_DATA__=JSON.parse("{\"lang\":\"en-US\",\"dir\":\"ltr\",\"title\":\"to-webp-json\",\"description\":\"Image conversion for static websites\",\"base\":\"/to-webp-json/\",\"head\":[],\"router\":{\"prefetchLinks\":true},\"appearance\":true,\"themeConfig\":{\"nav\":[{\"text\":\"Home\",\"link\":\"/\"},{\"text\":\"Docs\",\"link\":\"/docs\"}],\"sidebar\":[{\"text\":\"Docs\",\"items\":[{\"text\":\"to-webp-json\",\"link\":\"/docs\"}]}],\"socialLinks\":[{\"icon\":\"github\",\"link\":\"https://github.com/vdistortion/to-webp-json\"},{\"icon\":\"npm\",\"link\":\"https://www.npmjs.com/package/to-webp-json\"}]},\"locales\":{},\"scrollOffset\":134,\"cleanUrls\":false}");</script>
+    <script>window.__VP_HASH_MAP__=JSON.parse("{\"docs.md\":\"Day3niQX\",\"index.md\":\"DVVNNhlo\",\"ru_docs.md\":\"6jo-Bhen\",\"ru_index.md\":\"DiUEMjxv\"}");window.__VP_SITE_DATA__=JSON.parse("{\"lang\":\"en-US\",\"dir\":\"ltr\",\"title\":\"to-webp-json\",\"description\":\"Image conversion for static websites\",\"base\":\"/to-webp-json/\",\"head\":[],\"router\":{\"prefetchLinks\":true},\"appearance\":true,\"themeConfig\":{\"nav\":[{\"text\":\"Home\",\"link\":\"/\"},{\"text\":\"Docs\",\"link\":\"/docs\"}],\"sidebar\":[{\"text\":\"Docs\",\"items\":[{\"text\":\"to-webp-json\",\"link\":\"/docs\"}]}],\"socialLinks\":[{\"icon\":\"github\",\"link\":\"https://github.com/vdistortion/to-webp-json\"},{\"icon\":\"npm\",\"link\":\"https://www.npmjs.com/package/to-webp-json\"}]},\"locales\":{\"root\":{\"label\":\"🇬🇧 English\",\"lang\":\"en\"},\"ru\":{\"label\":\"🇷🇺 Русский\",\"lang\":\"ru\",\"link\":\"/ru/\",\"themeConfig\":{\"nav\":[{\"text\":\"Главная\",\"link\":\"/ru/\"},{\"text\":\"Документация\",\"link\":\"/ru/docs\"}],\"sidebar\":[{\"text\":\"Документация\",\"items\":[{\"text\":\"to-webp-json\",\"link\":\"/ru/docs\"}]}]}}},\"scrollOffset\":134,\"cleanUrls\":false}");</script>
     
   </body>
 </html>
